# modelmind

./: .editorconfig  .firebaserc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy_cloud_run.yml  deploy_cloud_run_prod.yml  firebase.json  firestore.indexes.json  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bigquery/: README.md
bigquery/queries/: calculate_accuracy.py  results_counts.py
bigquery/schema_views/: MUHXeHa6.json  Q3vvXYsi.json  profiles.json  questions.json  views.json
functions/: package-lock.json  package.json
functions/src/: index.ts
infra/: .terraform.lock.hcl  cloudbuild-triggerinfra.tf  cloudrun.tf  jobs-scheduler.tf  local.tf  main.tf  remotestate.tf  secret.tf  tf_pr_cloudbuild.yml
modelmind/: __init__.py  __main__.py  cli.py  config.py  logger.py  settings.py
modelmind/api/: __init__.py  app.py  exceptions.py  middleware.py  state.py
modelmind/api/_dependencies/: notifier.py  profile.py  questionnaire.py  results.py
modelmind/api/_dependencies/daos/: providers.py
modelmind/api/_dependencies/session/: create.py  get.py  verify.py
modelmind/api/business/: __init__.py  app.py  middleware.py
modelmind/api/business/analytics/: schemas.py
modelmind/api/business/auth/: exceptions.py
modelmind/api/business/profiles/: endpoints.py  schemas.py
modelmind/api/business/questionnaires/: endpoints.py  schemas.py
modelmind/api/business/results/: endpoints.py  exceptions.py  schemas.py
modelmind/api/business/sessions/: sessions.py
modelmind/api/internal/: __init__.py  app.py  middleware.py
modelmind/api/internal/dependencies/: dao_providers.py  notifier.py
modelmind/api/internal/dependencies/clients/: bigquery.py  discord.py
modelmind/api/internal/endpoints/: health.py  statistics.py
modelmind/api/internal/schemas/: requests.py
modelmind/api/internal/statistics/: endpoints.py
modelmind/api/monitoring/: __init__.py
modelmind/api/public/: __init__.py
modelmind/api/public/commands/: send_result_notification.py
modelmind/api/public/dependencies/: daos.py  notifier.py  profile.py  questionnaire.py  results.py  session.py
modelmind/api/public/dependencies/clients/: discord.py  firestore.py
modelmind/api/public/dependencies/daos/: firestore.py  providers.py
modelmind/api/public/dependencies/session/: create.py  get.py  verify.py
modelmind/api/public/endpoints/: profile.py  questionnaire.py  results.py
modelmind/api/public/exceptions/: questionnaires.py  results.py  sessions.py
modelmind/api/public/schemas/: analytics.py  base.py  next_questions.py  profiles.py  questionnaires.py  results.py
modelmind/clients/: httpx_client.py
modelmind/clients/discord/: schemas.py  webhook.py
modelmind/commands/: base.py  calculate_persony_statistics.py  calculate_statistics.py  next_questions.py  schedule_persony_statistics.py  send_statistics_notification.py
modelmind/community/engines/: engine_factory.py  exceptions.py
modelmind/community/engines/persony/: __init__.py  analyzer.py  dimensions.py  engine_v1.py  engine_v2.py  playground.ipynb  questions.py
modelmind/community/theory/: conversions.py  exceptions.py
modelmind/community/theory/jung/: functions.py  stacks.py
modelmind/community/theory/mbti/: trait.py
modelmind/community/theory/neuroticism/: trait.py
modelmind/db/daos/: base.py  profiles.py  questionnaires.py  results.py  sessions.py
modelmind/db/exceptions/: base.py  profiles.py  questionnaires.py  sessions.py
modelmind/db/schemas/: __init__.py  firestore.py  profiles.py  questionnaires.py  questions.py  results.py  sessions.py  settings.py  statistics.py
modelmind/models/analytics/: base.py  schemas.py  transformations.py
modelmind/models/engines/: __init__.py  base.py  mbti.py
modelmind/models/questionnaires/: __init__.py  base.py  mbti.py  supervised.py
modelmind/models/questions/: __init__.py  base.py  schemas.py  transformations.py
modelmind/models/results/: __init__.py  base.py  persony.py
modelmind/models/statistics/: __init__.py  base.py
modelmind/models/theories/: conversions.py
modelmind/models/theories/jung/: functions.py  stacks.py
modelmind/models/theories/mbti/: category.py  types.py
modelmind/persony/: engine.py  question.py  questionnaire.py
modelmind/persony/theory/mbti/: trait.py  types.py
modelmind/services/: cloud_trace.py  create_cloud_task.py  engine_factory.py  event_notifier.py  firestore.py  httpx_client.py
modelmind/services/bigquery/: client.py
modelmind/services/discord/: webhook.py
modelmind/services/firestore/: client.py
modelmind/services/monitoring/: cloud_trace.py  error_reporting.py  trace_context.py
modelmind/utils/: cache.py  type_adapter.py
terraform/: .gitignore  .terraform.lock.hcl  backend.tf  buckets.tf  cloudbuild-applicative.tf  cloudrun.tf  local.tf  main.tf  secret.tf  tasks_queue.tf  variables.tf
tests/: conftest.py  test_health.py
tests/models/questions/: test_create_questions.py
